--- a/app/src/main/res/layout/monitoring.xml
+++ b/app/src/main/res/layout/monitoring.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/lay_scroll_moni_metric"
+    android:id="@+id/lay_scroll_moni_alarm_back"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:fillViewport="true">
+    android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/linearLayout3"
+    <ScrollView
+        android:id="@+id/lay_scroll_moni_metric"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/회색">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/회색">
 
         <ImageView
             android:id="@+id/imageView23"
@@ -119,81 +125,65 @@
             app:srcCompat="@color/상단민트" />
 
 
-        <TextView
-            android:id="@+id/editText14"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="8dp"
-            android:ems="10"
-            android:gravity="center_horizontal"
-            android:inputType="textPersonName"
-            android:text="알람 :"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView23" />
+            <TextView
+                android:id="@+id/editText14"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="8dp"
+                android:ems="10"
+                android:gravity="center_horizontal"
+                android:inputType="textPersonName"
+                android:text="알람 :"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView23" />
 
-        <Button
-            android:id="@+id/btn_moni_alarm_occ"
-            android:layout_width="53dp"
-            android:layout_height="29dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
-            android:background="@color/colorPrimary"
-            android:stateListAnimator="@null"
-            android:text="발생 0"
-            android:textColor="@color/빨간글자"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/editText14"
-            app:layout_constraintStart_toEndOf="@+id/editText14"
-            app:layout_constraintTop_toTopOf="@+id/editText14" />
+            <Button
+                android:id="@+id/btn_moni_alarm_occ"
+                android:layout_width="53dp"
+                android:layout_height="29dp"
+                android:background="@color/colorPrimary"
+                android:stateListAnimator="@null"
+                android:text="발생 0"
+                android:textColor="@color/빨간글자"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@+id/editText14"
+                app:layout_constraintEnd_toStartOf="@+id/btn_moni_alarm_data"
+                app:layout_constraintStart_toEndOf="@+id/editText14"
+                app:layout_constraintTop_toTopOf="@+id/editText14" />
 
-        <Button
-            android:id="@+id/btn_moni_alarm_normal"
-            android:layout_width="46dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
-            android:background="@color/colorPrimary"
-            android:stateListAnimator="@null"
-            android:text="안정 0"
-            android:textColor="@color/초록글자"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/btn_moni_alarm_data"
-            app:layout_constraintStart_toEndOf="@+id/btn_moni_alarm_data"
-            app:layout_constraintTop_toTopOf="@+id/btn_moni_alarm_data" />
+            <Button
+                android:id="@+id/btn_moni_alarm_normal"
+                android:layout_width="46dp"
+                android:layout_height="30dp"
+                android:layout_marginEnd="48dp"
+                android:layout_marginRight="48dp"
+                android:background="@color/colorPrimary"
+                android:stateListAnimator="@null"
+                android:text="안정 0"
+                android:textColor="@color/초록글자"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_moni_alarm_data"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/btn_moni_alarm_data" />
 
-        <Button
-            android:id="@+id/btn_moni_alarm_metric"
-            android:layout_width="96dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
-            android:background="@color/colorPrimary"
-            android:stateListAnimator="@null"
-            android:text="메트릭 개수 0"
-            android:textColor="@color/검회색글자"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/btn_moni_alarm_normal"
-            app:layout_constraintStart_toEndOf="@+id/btn_moni_alarm_normal"
-            app:layout_constraintTop_toTopOf="@+id/btn_moni_alarm_normal" />
-
-        <Button
-            android:id="@+id/btn_moni_alarm_data"
-            android:layout_width="85dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
-            android:background="@color/회색"
-            android:stateListAnimator="@null"
-            android:text="데이터 부족 0"
-            android:textColor="@color/주황색글자"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/btn_moni_alarm_occ"
-            app:layout_constraintStart_toEndOf="@+id/btn_moni_alarm_occ"
-            app:layout_constraintTop_toTopOf="@+id/btn_moni_alarm_occ" />
+            <Button
+                android:id="@+id/btn_moni_alarm_data"
+                android:layout_width="85dp"
+                android:layout_height="30dp"
+                android:layout_marginEnd="36dp"
+                android:layout_marginRight="36dp"
+                android:background="@color/회색"
+                android:stateListAnimator="@null"
+                android:text="데이터 부족 0"
+                android:textColor="@color/주황색글자"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_moni_alarm_occ"
+                app:layout_constraintEnd_toStartOf="@+id/btn_moni_alarm_normal"
+                app:layout_constraintTop_toTopOf="@+id/btn_moni_alarm_occ" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/lay_moni_main_metric"
@@ -427,5 +417,123 @@
             app:layout_constraintBottom_toBottomOf="@+id/image44"
             app:layout_constraintEnd_toStartOf="@+id/tbtn_moni_main_msg"
             app:layout_constraintTop_toTopOf="@+id/image44" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/lay_bottom_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageView
+            android:id="@+id/bar_bottom"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@color/상단민트" />
+
+        <TextView
+            android:id="@+id/txt_monitoring"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="41dp"
+            android:layout_marginLeft="41dp"
+            android:layout_marginBottom="3dp"
+            android:text="MONITORING"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txt_service" />
+
+        <ImageView
+            android:id="@+id/img_dashboard"
+            android:layout_width="47dp"
+            android:layout_height="37dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginBottom="18dp"
+            android:onClick="DashboardClicked"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ktlogo_cloud2" />
+
+        <ImageView
+            android:id="@+id/img_monitoirng"
+            android:layout_width="47dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="55dp"
+            android:layout_marginLeft="55dp"
+            android:layout_marginBottom="18dp"
+            android:onClick="MonitoringClicked"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/img_service"
+            app:srcCompat="@drawable/ktlogo_monitoring3" />
+
+        <TextView
+            android:id="@+id/txt_dashboard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginBottom="3dp"
+            android:text="DASHBOARD"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/txt_service"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="41dp"
+            android:layout_marginLeft="41dp"
+            android:layout_marginBottom="3dp"
+            android:text="SERVICE"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txt_dashboard" />
+
+        <TextView
+            android:id="@+id/txt_payment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="34dp"
+            android:layout_marginRight="34dp"
+            android:layout_marginBottom="3dp"
+            android:text="SETTING"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/img_payment"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="53dp"
+            android:layout_marginLeft="53dp"
+            android:layout_marginBottom="16dp"
+            android:onClick="PaymentClicked"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/img_monitoirng"
+            app:srcCompat="@drawable/payment" />
+
+        <ImageView
+            android:id="@+id/img_service"
+            android:layout_width="47dp"
+            android:layout_height="38dp"
+            android:layout_marginStart="55dp"
+            android:layout_marginLeft="55dp"
+            android:layout_marginBottom="16dp"
+            android:onClick="ServiceClicked"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/img_dashboard"
+            app:srcCompat="@drawable/service_2" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
