--- a/app/src/main/res/layout/item_monitoring.xml
+++ b/app/src/main/res/layout/item_monitoring.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/server_lay"
     android:layout_width="412dp"
-    android:layout_height="40dp"
+    android:layout_height="48dp"
     android:layout_marginBottom="8dp"
     android:background="@color/회색"
     android:gravity="center_vertical"
@@ -14,7 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearLayout"
         android:layout_width="412dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="@color/회색"
         android:gravity="center_vertical"
@@ -29,10 +29,10 @@
             android:includeFontPadding="false"
             android:text="모니터링 서비스 상황(?) 받아오기"
             android:textColor="@android:color/black"
-            android:textSize="11sp"
+            android:textSize="13sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/img_server"
-            app:layout_constraintTop_toTopOf="@+id/img_server" />
+            app:layout_constraintStart_toEndOf="@+id/img_monitoring"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txt_monitoring_content"
@@ -41,8 +41,8 @@
             android:layout_marginTop="2dp"
             android:includeFontPadding="false"
             android:text="알람 요약"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="8sp"
+            android:textColor="@color/진한회색"
+            android:textSize="11sp"
             app:layout_constraintStart_toStartOf="@+id/txt_monitoring_title"
             app:layout_constraintTop_toBottomOf="@+id/txt_monitoring_title" />
 
