--- a/app/src/main/res/layout/item_service_autoscaling.xml
+++ b/app/src/main/res/layout/item_service_autoscaling.xml
@@ -14,7 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lay_service_auto"
         android:layout_width="match_parent"
-        android:layout_height="41dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="@color/colorAccent"
         android:gravity="center_vertical"
@@ -48,21 +48,8 @@
                 android:layout_marginLeft="12dp"
                 android:text="오토스케일링 이름 받아오기 (클릭시 하단 관리창)"
                 android:textSize="17sp"
-                app:layout_constraintBottom_toBottomOf="@+id/img_service_auto"
                 app:layout_constraintStart_toEndOf="@+id/img_service_auto"
-                app:layout_constraintTop_toTopOf="@+id/img_service_auto" />
-
-            <View
-                android:id="@+id/view6"
-                style="@style/Divider"
-                android:layout_width="wrap_content"
-                android:layout_height="2dp"
-                android:layout_marginTop="4dp"
-                android:background="@color/colorPrimaryDark"
-                app:layout_constraintEnd_toEndOf="@+id/imageView23"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/img_service_auto" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
