--- a/app/src/main/res/layout/moni_messaging.xml
+++ b/app/src/main/res/layout/moni_messaging.xml
@@ -1,67 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/lay_scroll_moni_alarm"
+    android:id="@+id/lay_scroll_moni_alarm_back"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <ScrollView
+        android:id="@+id/lay_scroll_moni_alarm"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/회색">
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView_topic_list"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@color/회색"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/image44" />
+
+
+            <ImageView
+                android:id="@+id/image44"
+                android:layout_width="412dp"
+                android:layout_height="48dp"
+                android:background="@color/colorAccent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/btn_moni_main_metric"
+                android:layout_width="98dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:background="@null"
+                android:ems="10"
+                android:focusableInTouchMode="false"
+                android:inputType="textPersonName"
+                android:text="토픽 목록"
+                android:textColor="@color/검정"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/image44"
+                app:layout_constraintStart_toStartOf="@+id/image44"
+                app:layout_constraintTop_toTopOf="@+id/image44" />
+
+            <ImageView
+                android:id="@+id/imageView43"
+                android:layout_width="48dp"
+                android:layout_height="6dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
+                app:layout_constraintStart_toStartOf="@+id/image44"
+                app:layout_constraintTop_toTopOf="@+id/image44"
+                app:srcCompat="@color/바주황" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@color/회색">
-
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView_topic_list"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@color/회색"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image44" />
-
+        android:id="@+id/lay_bottom_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
-            android:id="@+id/image44"
-            android:layout_width="412dp"
-            android:layout_height="48dp"
-            android:background="@color/colorAccent"
+            android:id="@+id/bar_bottom"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:srcCompat="@color/상단민트" />
 
         <TextView
-            android:id="@+id/btn_moni_main_metric"
-            android:layout_width="98dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:background="@null"
-            android:ems="10"
-            android:focusableInTouchMode="false"
-            android:inputType="textPersonName"
-            android:text="토픽 목록"
-            android:textColor="@color/검정"
-            android:textSize="17sp"
+            android:id="@+id/txt_monitoring"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="41dp"
+            android:layout_marginLeft="41dp"
+            android:layout_marginBottom="3dp"
+            android:text="MONITORING"
+            android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/image44"
-            app:layout_constraintStart_toStartOf="@+id/image44"
-            app:layout_constraintTop_toTopOf="@+id/image44" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txt_service" />
 
         <ImageView
-            android:id="@+id/imageView43"
-            android:layout_width="48dp"
-            android:layout_height="6dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
-            app:layout_constraintStart_toStartOf="@+id/image44"
-            app:layout_constraintTop_toTopOf="@+id/image44"
-            app:srcCompat="@color/바주황" />
+            android:id="@+id/img_dashboard"
+            android:layout_width="47dp"
+            android:layout_height="37dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginBottom="18dp"
+            android:onClick="DashboardClicked"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ktlogo_cloud2" />
 
+        <ImageView
+            android:id="@+id/img_monitoirng"
+            android:layout_width="47dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="55dp"
+            android:layout_marginLeft="55dp"
+            android:layout_marginBottom="18dp"
+            android:onClick="MonitoringClicked"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/img_service"
+            app:srcCompat="@drawable/ktlogo_monitoring3" />
+
+        <TextView
+            android:id="@+id/txt_dashboard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginBottom="3dp"
+            android:text="DASHBOARD"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/txt_service"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="41dp"
+            android:layout_marginLeft="41dp"
+            android:layout_marginBottom="3dp"
+            android:text="SERVICE"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txt_dashboard" />
+
+        <TextView
+            android:id="@+id/txt_payment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="34dp"
+            android:layout_marginRight="34dp"
+            android:layout_marginBottom="3dp"
+            android:text="SETTING"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/img_payment"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="53dp"
+            android:layout_marginLeft="53dp"
+            android:layout_marginBottom="16dp"
+            android:onClick="PaymentClicked"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/img_monitoirng"
+            app:srcCompat="@drawable/payment" />
+
+        <ImageView
+            android:id="@+id/img_service"
+            android:layout_width="47dp"
+            android:layout_height="38dp"
+            android:layout_marginStart="55dp"
+            android:layout_marginLeft="55dp"
+            android:layout_marginBottom="16dp"
+            android:onClick="ServiceClicked"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/img_dashboard"
+            app:srcCompat="@drawable/service_2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
