--- a/app/src/main/res/layout/item_service_nas.xml
+++ b/app/src/main/res/layout/item_service_nas.xml
@@ -48,21 +48,9 @@
                 android:layout_marginLeft="12dp"
                 android:text="NAS 볼륨명 받아오기 (클릭시 하단 관리창)"
                 android:textSize="17sp"
-                app:layout_constraintBottom_toBottomOf="@+id/img_service_nas"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/img_service_nas"
-                app:layout_constraintTop_toTopOf="@+id/img_service_nas" />
-
-            <View
-                android:id="@+id/view6"
-                style="@style/Divider"
-                android:layout_width="wrap_content"
-                android:layout_height="2dp"
-                android:layout_marginTop="4dp"
-                android:background="@color/colorPrimaryDark"
-                app:layout_constraintEnd_toEndOf="@+id/imageView23"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/img_service_nas" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
