--- a/app/src/main/res/layout/item_service_server.xml
+++ b/app/src/main/res/layout/item_service_server.xml
@@ -14,12 +14,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lay_service_server"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="41dp"
         android:layout_weight="1"
         android:background="@color/colorAccent"
         android:gravity="center_vertical"
         android:orientation="vertical">
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/lay_service_server2"
             android:layout_width="0dp"
@@ -48,9 +47,10 @@
                 android:layout_marginLeft="12dp"
                 android:text="서버 이름 받아오기 (클릭시 하단 관리창)"
                 android:textSize="17sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/img_service_server"
                 app:layout_constraintStart_toEndOf="@+id/img_service_server"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@+id/img_service_server" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
