--- a/app/src/main/res/layout/item_service_disk.xml
+++ b/app/src/main/res/layout/item_service_disk.xml
@@ -14,7 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lay_service_disk"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="41dp"
         android:layout_weight="1"
         android:background="@color/colorAccent"
         android:gravity="center_vertical"
@@ -48,15 +48,21 @@
                 android:layout_marginLeft="12dp"
                 android:text="디스크 이름 받아오기 (클릭시 하단 관리창)"
                 android:textSize="17sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/img_service_disk"
                 app:layout_constraintStart_toEndOf="@+id/img_service_disk"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@+id/img_service_disk" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <View
+        android:id="@+id/view6"
+        style="@style/Divider"
+        android:layout_width="wrap_content"
+        android:layout_height="2dp"
+        android:background="@color/colorPrimaryDark" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lay_service_disk_item"
@@ -74,7 +80,7 @@
         <ImageView
             android:id="@+id/img_service_disk_item_back"
             android:layout_width="396dp"
-            android:layout_height="160dp"
+            android:layout_height="168dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@color/회색" />
@@ -152,6 +158,20 @@
             app:layout_constraintTop_toBottomOf="@+id/txt_disk_server_back" />
 
         <TextView
+            android:id="@+id/txt_disk_type_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="@null"
+            android:ems="5"
+            android:inputType="textPersonName"
+            android:text="구분 : "
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/txt_disk_zone_back"
+            app:layout_constraintTop_toBottomOf="@+id/txt_disk_zone_back" />
+
+        <TextView
             android:id="@+id/txt_service_disk_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -186,6 +206,15 @@
             app:layout_constraintBottom_toBottomOf="@+id/txt_disk_server_back"
             app:layout_constraintStart_toEndOf="@+id/txt_disk_server_back"
             app:layout_constraintTop_toTopOf="@+id/txt_disk_server_back" />
+
+        <TextView
+            android:id="@+id/txt_service_disk_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="디스크 구분 받아오기"
+            app:layout_constraintBottom_toBottomOf="@+id/txt_disk_type_back"
+            app:layout_constraintStart_toEndOf="@+id/txt_disk_type_back"
+            app:layout_constraintTop_toTopOf="@+id/txt_disk_type_back" />
 
         <TextView
             android:id="@+id/txt_service_disk_zone"
