--- a/app/src/main/res/layout/item_service_server.xml
+++ b/app/src/main/res/layout/item_service_server.xml
@@ -51,6 +51,17 @@
                 app:layout_constraintStart_toEndOf="@+id/img_service_server"
                 app:layout_constraintTop_toTopOf="@+id/img_service_server" />
 
+            <View
+                android:id="@+id/view6"
+                style="@style/Divider"
+                android:layout_width="wrap_content"
+                android:layout_height="2dp"
+                android:layout_marginTop="4dp"
+                android:background="@color/colorPrimaryDark"
+                app:layout_constraintEnd_toEndOf="@+id/imageView23"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/img_service_server" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -69,22 +80,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <View
-            android:id="@+id/view2"
-            style="@style/Divider"
-            android:layout_width="wrap_content"
-            android:layout_height="2dp"
-            android:layout_marginTop="2dp"
-            android:background="@color/colorPrimaryDark"
-            app:layout_constraintEnd_toEndOf="@+id/imageView23"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_server_zone_back" />
-
         <ImageView
             android:id="@+id/img_service_server_item_back"
             android:layout_width="396dp"
-            android:layout_height="220dp"
+            android:layout_height="298dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@color/회색" />
@@ -93,10 +92,10 @@
             android:id="@+id/btn_service_server_stop"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/stop"
             app:layout_constraintStart_toStartOf="@+id/txt_server_os_back"
-            app:layout_constraintTop_toBottomOf="@+id/view2" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_server_disk_back" />
 
         <Button
             android:id="@+id/btn_service_server_start"
@@ -174,6 +173,48 @@
             app:layout_constraintStart_toStartOf="@+id/txt_server_os_back"
             app:layout_constraintTop_toBottomOf="@+id/txt_server_os_back" />
 
+        <TextView
+            android:id="@+id/txt_server_addr_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="@null"
+            android:ems="5"
+            android:inputType="textPersonName"
+            android:text="내부주소 : "
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/txt_server_zone_back"
+            app:layout_constraintTop_toBottomOf="@+id/txt_server_zone_back" />
+
+        <TextView
+            android:id="@+id/txt_server_cpu_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="@null"
+            android:ems="5"
+            android:inputType="textPersonName"
+            android:text="CPU/메모리 : "
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/txt_server_addr_back"
+            app:layout_constraintTop_toBottomOf="@+id/txt_server_addr_back" />
+
+        <TextView
+            android:id="@+id/txt_server_disk_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="@null"
+            android:ems="5"
+            android:inputType="textPersonName"
+            android:text="디스크 : "
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/txt_server_cpu_back"
+            app:layout_constraintTop_toBottomOf="@+id/txt_server_cpu_back" />
+
         <Button
             android:id="@+id/btn_service_server_stop_txt"
             android:layout_width="40dp"
@@ -245,6 +286,33 @@
             app:layout_constraintBottom_toBottomOf="@+id/txt_server_zone_back"
             app:layout_constraintStart_toEndOf="@+id/txt_server_zone_back"
             app:layout_constraintTop_toTopOf="@+id/txt_server_zone_back" />
+
+        <TextView
+            android:id="@+id/txt_service_server_addr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="내부 주소 받아오기"
+            app:layout_constraintBottom_toBottomOf="@+id/txt_server_addr_back"
+            app:layout_constraintStart_toEndOf="@+id/txt_server_addr_back"
+            app:layout_constraintTop_toTopOf="@+id/txt_server_addr_back" />
+
+        <TextView
+            android:id="@+id/txt_service_server_cpu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CPU/메모리 받아오기"
+            app:layout_constraintBottom_toBottomOf="@+id/txt_server_cpu_back"
+            app:layout_constraintStart_toEndOf="@+id/txt_server_cpu_back"
+            app:layout_constraintTop_toTopOf="@+id/txt_server_cpu_back" />
+
+        <TextView
+            android:id="@+id/txt_service_server_disk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="디스크 용량 받아오기"
+            app:layout_constraintBottom_toBottomOf="@+id/txt_server_disk_back"
+            app:layout_constraintStart_toEndOf="@+id/txt_server_disk_back"
+            app:layout_constraintTop_toTopOf="@+id/txt_server_disk_back" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
