--- a/app/src/main/res/layout/item_service_server.xml
+++ b/app/src/main/res/layout/item_service_server.xml
@@ -222,6 +222,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginLeft="12dp"
             android:background="@null"
+            android:textSize="15sp"
             android:text="정지"
             app:layout_constraintBottom_toBottomOf="@+id/btn_service_server_stop"
             app:layout_constraintStart_toEndOf="@+id/btn_service_server_stop"
@@ -234,6 +235,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginLeft="12dp"
             android:background="@null"
+            android:textSize="15sp"
             android:text="시작"
             app:layout_constraintBottom_toBottomOf="@+id/btn_service_server_start"
             app:layout_constraintStart_toEndOf="@+id/btn_service_server_start"
@@ -246,6 +248,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginLeft="12dp"
             android:background="@null"
+            android:textSize="15sp"
             android:text="재시작"
             app:layout_constraintBottom_toBottomOf="@+id/btn_service_server_reStart"
             app:layout_constraintStart_toEndOf="@+id/btn_service_server_reStart"
@@ -255,6 +258,7 @@
             android:id="@+id/txt_service_server_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="15sp"
             android:text="서버 현재 상태 받아오기"
             app:layout_constraintBottom_toBottomOf="@+id/txt_server_state_back"
             app:layout_constraintStart_toEndOf="@+id/txt_server_state_back"
@@ -265,6 +269,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="YYYY-MM-DD 받아오기"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/txt_server_date_back"
             app:layout_constraintStart_toEndOf="@+id/txt_server_date_back"
             app:layout_constraintTop_toTopOf="@+id/txt_server_date_back" />
@@ -274,6 +279,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="운영체제 상세 받아오기"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/txt_server_os_back"
             app:layout_constraintStart_toEndOf="@+id/txt_server_os_back"
             app:layout_constraintTop_toTopOf="@+id/txt_server_os_back" />
@@ -283,6 +289,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Zone 위치 받아오기"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/txt_server_zone_back"
             app:layout_constraintStart_toEndOf="@+id/txt_server_zone_back"
             app:layout_constraintTop_toTopOf="@+id/txt_server_zone_back" />
@@ -291,6 +298,7 @@
             android:id="@+id/txt_service_server_addr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="15sp"
             android:text="내부 주소 받아오기"
             app:layout_constraintBottom_toBottomOf="@+id/txt_server_addr_back"
             app:layout_constraintStart_toEndOf="@+id/txt_server_addr_back"
@@ -301,6 +309,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="CPU/메모리 받아오기"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/txt_server_cpu_back"
             app:layout_constraintStart_toEndOf="@+id/txt_server_cpu_back"
             app:layout_constraintTop_toTopOf="@+id/txt_server_cpu_back" />
@@ -310,6 +319,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="디스크 용량 받아오기"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/txt_server_disk_back"
             app:layout_constraintStart_toEndOf="@+id/txt_server_disk_back"
             app:layout_constraintTop_toTopOf="@+id/txt_server_disk_back" />
