--- a/app/src/main/res/layout/moni_watch_metric.xml
+++ b/app/src/main/res/layout/moni_watch_metric.xml
@@ -151,8 +151,7 @@
                     android:id="@+id/txt_moni_metric_period"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginLeft="24dp"
+                    android:layout_marginStart="8dp"
                     android:background="@null"
                     android:text="주기 : "
                     android:textStyle="bold"
@@ -164,8 +163,7 @@
                     android:id="@+id/txt_moni_metric_cycle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginLeft="24dp"
+                    android:layout_marginStart="8dp"
                     android:background="@null"
                     android:text="구간설정 : "
                     android:textStyle="bold"
@@ -203,7 +201,6 @@
                     android:layout_width="56dp"
                     android:layout_height="25dp"
                     android:layout_marginStart="4dp"
-                    android:layout_marginLeft="4dp"
                     android:background="@color/회색"
                     android:text="1시간"
                     app:layout_constraintBottom_toBottomOf="@+id/txt_moni_metric_cycle"
@@ -215,10 +212,8 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
                     android:layout_marginBottom="12dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -235,6 +230,18 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="60dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginBottom="5dp"
+                    android:text="SHOW"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toTopOf="@+id/lay_metric_graph"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/btn__moni_metric_cycle" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
