--- a/app/src/main/res/menu/techcenter.xml
+++ b/app/src/main/res/menu/techcenter.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu>
+<item xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/action_qa"
+    android:icon="@drawable/ktlogo_techservice"
+    android:title="qa"
+    app:showAsAction="always">
 
-    <item
-        android:id="@+id/web"
-        android:icon="@android:drawable/sym_action_chat"
-        android:title="웹으로 문의하기"
-        app:showAsAction = "always"></item>
+    <menu>
+        <item
+            android:id="@+id/web"
+            android:icon="@android:drawable/sym_action_chat"
+            android:title="웹으로 문의하기"
+            android:textSize="10sp"
+            app:showAsAction="never">@style/popupTheme1</item>
 
-    <item
-        android:id="@+id/tel"
-        android:icon="@android:drawable/sym_action_call"
-        android:title="상담원 연결"
-        app:showAsAction = "always"/>
+        <item
+            android:id="@+id/tel"
+            android:icon="@android:drawable/sym_action_call"
+            android:title="상담원 연결"
+            android:textSize="10sp"
+            app:showAsAction="never" >@style/popupTheme1</item>
 
-</menu>
+    </menu>
+</item></menu>
