--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,12 +6,15 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:actionMenuTextAppearance">@style/popupTheme1</item>
     </style>
 
-    <style name="popupTheme1" parent="Widget.AppCompat.PopupMenu">
+    <style name="popupTheme1">
         <item name="android:textColor">@android:color/widget_edittext_dark</item>
         <item name="android:itemBackground">@color/회색</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">10sp</item>
+        <item name="textAllCaps">false</item>
     </style>
 
     <style name="Divider">
