--- a/app/src/main/res/layout/lb_server_popup.xml
+++ b/app/src/main/res/layout/lb_server_popup.xml
@@ -13,7 +13,6 @@
         android:background="#F0F0F0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText7" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
