--- a/app/src/main/res/layout/moni_watch_metric.xml
+++ b/app/src/main/res/layout/moni_watch_metric.xml
@@ -237,6 +237,7 @@
                     android:layout_height="40dp"
                     android:layout_marginStart="3dp"
                     android:layout_marginBottom="5dp"
+                    android:onClick="firstClicked"
                     android:text="SHOW"
                     android:textSize="12sp"
                     app:layout_constraintBottom_toTopOf="@+id/lay_metric_graph"
